--- a/src/components/sitelayout/Sidebar/SidebarPage.astro
+++ b/src/components/sitelayout/Sidebar/SidebarPage.astro
@@ -34,7 +34,7 @@ import SidebarNav from "./SidebarNav.astro";
       width: 300px;
       height: 100%;
       display: flex;
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 </style>
