--- a/src/components/portfolioViews/coolTile/CoolTileContainer.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileContainer.astro
@@ -7,7 +7,7 @@ const tileSettings = settings.portfolioLayouts.coolTile;
 <style
   define:vars={{
     minTileWidth: tileSettings.minTileWidth + "px",
-
+    containerPadding: tileSettings.containerPadding,
     tileGap: tileSettings.itemGap,
   }}
 >
@@ -18,6 +18,7 @@ const tileSettings = settings.portfolioLayouts.coolTile;
       minmax(min(var(--minTileWidth), 100%), 1fr)
     );
     gap: var(--tileGap);
+    padding: var(--containerPadding);
   }
 </style>
 
