improves appearance of tiles to allow entire area to be clickable

--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -26,24 +26,25 @@ if (thumbnail) {
     overflow: hidden;
     background-size: cover;
     transition: background 0.5s linear;
+    display: flex;
+    justify-content: stretch;
+    flex-direction: column;
   }
 
   .tile-hover-panel {
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-    right: 0;
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.642);
-    padding: 0.5rem;
+
     display: flex;
     flex-direction: column;
     transform: scale(0.9);
     transform-origin: 50% 120% 0;
     opacity: 0;
     transition: all 0.3s ease;
-    /* transform: scale(1);
-    opacity: 1; */
+    overflow: visible;
+
+    justify-content: flex-end;
+    flex-grow: 1;
+    flex-basis: 100%;
   }
 
   .portfolio-tile:hover .tile-hover-panel,
@@ -51,15 +52,18 @@ if (thumbnail) {
     transform: scale(1);
     opacity: 1;
   }
-
+  .tile-hover-panel-items {
+    background-color: rgba(0, 0, 0, 0.642);
+    padding: 0.5rem;
+  }
   .tile-hover-panel-title {
     color: white;
     text-decoration: none;
   }
-  .tile-hover-panel-title::after {
+  .tile-hover-panel-title::before {
     content: "";
     position: absolute;
-
+    /* background-color: yellow; */
     width: 100%;
     left: 0;
     top: 0;
@@ -78,9 +82,11 @@ if (thumbnail) {
   style={{ backgroundColor: accent, backgroundImage: `url(${fancyImage.src})` }}
 >
   <div class="tile-hover-panel">
-    <a class="tile-hover-panel-title" href={url}>{title}</a>
-    <p class="tile-hover-panel-line2">{line2}</p>
-    <p class="tile-hover-panel-line3">{line3}</p>
+    <div class="tile-hover-panel-items">
+      <a class="tile-hover-panel-title" href={url}>{title}</a>
+      <p class="tile-hover-panel-line2">{line2}</p>
+      <p class="tile-hover-panel-line3">{line3}</p>
+    </div>
   </div>
 </article>
 
