adds cms field for tile accent color

--- a/src/components/portfolioViews/coolTile/CoolTileContainer.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileContainer.astro
@@ -14,7 +14,7 @@ const tileSettings = settings.portfolioLayouts.coolTile;
   .tile-container {
     display: grid;
     grid-template-columns: repeat(
-      auto-fit,
+      auto-fill,
       minmax(min(var(--minTileWidth), 100%), 1fr)
     );
     gap: var(--tileGap);
