--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -81,6 +81,7 @@ const overlayColor = colord(
   .tile-hover-panel-title {
     font-family: var(--title-fontFamily);
     font-size: var(--title-fontSize);
+    font-weight: var(--title-fontWeight);
     margin-top: var(--title-marginTop);
     margin-bottom: var(--title-marginBottom);
     color: var(--title-color);
@@ -89,6 +90,7 @@ const overlayColor = colord(
   .tile-hover-panel-line2 {
     font-family: var(--line2-fontFamily);
     font-size: var(--line2-fontSize);
+    font-weight: var(--line2-fontWeight);
     margin-top: var(--line2-marginTop);
     margin-bottom: var(--line2-marginBottom);
     color: var(--line2-color);
@@ -97,6 +99,7 @@ const overlayColor = colord(
   .tile-hover-panel-line3 {
     font-family: var(--line3-fontFamily);
     font-size: var(--line3-fontSize);
+    font-weight: var(--line3-fontWeight);
     margin-top: var(--line3-marginTop);
     margin-bottom: var(--line3-marginBottom);
     color: var(--line3-color);
