fixes font weightts for general type section

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -104,6 +104,8 @@ fontSpecSets.forEach((pair) => {
       h1 {
         font-family: var(--h1-fontFamily);
         font-size: var(--h1-fontSize);
+        font-weight: var(--h1-fontWeight);
+
         margin-top: var(--h1-marginTop);
         margin-bottom: var(--h1-marginBottom);
         color: var(--font-color-override, --h1-color);
@@ -112,6 +114,8 @@ fontSpecSets.forEach((pair) => {
       h2 {
         font-family: var(--h2-fontFamily);
         font-size: var(--h2-fontSize);
+        font-weight: var(--h2-fontWeight);
+
         margin-top: var(--h2-marginTop);
         margin-bottom: var(--h2-marginBottom);
         color: var(--font-color-override, --h2-color);
@@ -120,6 +124,8 @@ fontSpecSets.forEach((pair) => {
       h3 {
         font-family: var(--h3-fontFamily);
         font-size: var(--h3-fontSize);
+        font-weight: var(--h3-fontWeight);
+
         margin-top: var(--h3-marginTop);
         margin-bottom: var(--h3-marginBottom);
         color: var(--font-color-override, --h3-color);
@@ -128,6 +134,8 @@ fontSpecSets.forEach((pair) => {
       h4 {
         font-family: var(--h4-fontFamily);
         font-size: var(--h4-fontSize);
+        font-weight: var(--h4-fontWeight);
+
         margin-top: var(--h4-marginTop);
         margin-bottom: var(--h4-marginBottom);
         color: var(--font-color-override, --h4-color);
@@ -136,6 +144,8 @@ fontSpecSets.forEach((pair) => {
       h5 {
         font-family: var(--h5-fontFamily);
         font-size: var(--h5-fontSize);
+        font-weight: var(--h5-fontWeight);
+
         margin-top: var(--h5-marginTop);
         margin-bottom: var(--h5-marginBottom);
         color: var(--font-color-override, --h5-color);
@@ -145,6 +155,8 @@ fontSpecSets.forEach((pair) => {
       p {
         font-family: var(--p-fontFamily);
         font-size: var(--p-fontSize);
+        font-weight: var(--h6-fontWeight);
+
         margin-top: var(--p-marginTop);
         margin-bottom: var(--p-marginBottom);
         color: var(--font-color-override, --p-color);
