implements italic prop

--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -82,6 +82,7 @@ const overlayColor = colord(
     font-family: var(--title-fontFamily);
     font-size: var(--title-fontSize);
     font-weight: var(--title-fontWeight);
+    font-style: var(--title-fontStyle);
     margin-top: var(--title-marginTop);
     margin-bottom: var(--title-marginBottom);
     color: var(--title-color);
@@ -91,6 +92,8 @@ const overlayColor = colord(
     font-family: var(--line2-fontFamily);
     font-size: var(--line2-fontSize);
     font-weight: var(--line2-fontWeight);
+    font-style: var(--line2-fontStyle);
+
     margin-top: var(--line2-marginTop);
     margin-bottom: var(--line2-marginBottom);
     color: var(--line2-color);
@@ -100,6 +103,8 @@ const overlayColor = colord(
     font-family: var(--line3-fontFamily);
     font-size: var(--line3-fontSize);
     font-weight: var(--line3-fontWeight);
+    font-style: var(--line3-fontStyle);
+
     margin-top: var(--line3-marginTop);
     margin-bottom: var(--line3-marginBottom);
     color: var(--line3-color);
