fixes glitch where p had wrong font weight, adds in h6

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -105,7 +105,7 @@ fontSpecSets.forEach((pair) => {
         font-family: var(--h1-fontFamily);
         font-size: var(--h1-fontSize);
         font-weight: var(--h1-fontWeight);
-
+        font-style: var(--h1-fontStyle);
         margin-top: var(--h1-marginTop);
         margin-bottom: var(--h1-marginBottom);
         color: var(--font-color-override, --h1-color);
@@ -115,6 +115,7 @@ fontSpecSets.forEach((pair) => {
         font-family: var(--h2-fontFamily);
         font-size: var(--h2-fontSize);
         font-weight: var(--h2-fontWeight);
+        font-style: var(--h2-fontStyle);
 
         margin-top: var(--h2-marginTop);
         margin-bottom: var(--h2-marginBottom);
@@ -125,6 +126,7 @@ fontSpecSets.forEach((pair) => {
         font-family: var(--h3-fontFamily);
         font-size: var(--h3-fontSize);
         font-weight: var(--h3-fontWeight);
+        font-style: var(--h3-fontStyle);
 
         margin-top: var(--h3-marginTop);
         margin-bottom: var(--h3-marginBottom);
@@ -135,6 +137,7 @@ fontSpecSets.forEach((pair) => {
         font-family: var(--h4-fontFamily);
         font-size: var(--h4-fontSize);
         font-weight: var(--h4-fontWeight);
+        font-style: var(--h4-fontStyle);
 
         margin-top: var(--h4-marginTop);
         margin-bottom: var(--h4-marginBottom);
@@ -145,17 +148,30 @@ fontSpecSets.forEach((pair) => {
         font-family: var(--h5-fontFamily);
         font-size: var(--h5-fontSize);
         font-weight: var(--h5-fontWeight);
+        font-style: var(--h5-fontStyle);
 
         margin-top: var(--h5-marginTop);
         margin-bottom: var(--h5-marginBottom);
         color: var(--font-color-override, --h5-color);
         line-height: var(--h5-lineHeight);
       }
+      h6 {
+        font-family: var(--h6-fontFamily);
+        font-size: var(--h6-fontSize);
+        font-weight: var(--h6-fontWeight);
+        font-style: var(--h6-fontStyle);
+
+        margin-top: var(--h6-marginTop);
+        margin-bottom: var(--h6-marginBottom);
+        color: var(--font-color-override, --h6-color);
+        line-height: var(--h6-lineHeight);
+      }
 
       p {
         font-family: var(--p-fontFamily);
         font-size: var(--p-fontSize);
-        font-weight: var(--h6-fontWeight);
+        font-weight: var(--p-fontWeight);
+        font-style: var(--p-fontStyle);
 
         margin-top: var(--p-marginTop);
         margin-bottom: var(--p-marginBottom);
