adds hamburger menu

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -136,7 +136,9 @@ const menuItemCount = menuItems.length;
 <nav class="menu-main">
   <p class="site-title">Site Title</p>
 
-  <button id="menu-toggle">Menu</button>
+  <button id="menu-toggle"
+    ><span class="material-icons-outlined">menu</span></button
+  >
 
   <div class="menu-main-group menu-mobile-hidden">
     {
