--- a/src/components/sitelayout/Topbar/TopbarPage.astro
+++ b/src/components/sitelayout/Topbar/TopbarPage.astro
@@ -19,9 +19,9 @@ import { settings } from "../../helpers/settingsHelper";
     right: 0;
     background-color: var(--menuBackgroundColor);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+
     z-index: 10;
   }
   main {
