--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -16,10 +16,11 @@ const menuItemCount = menuItems.length;
     flex-grow: 1;
     display: flex;
     align-items: center;
+    padding: 0 0.5rem;
   }
 
   .menu-main {
-    height: 45px;
+    height: var(--menuHeight);
     position: fixed;
     left: 0px;
     right: 0px;
@@ -31,7 +32,7 @@ const menuItemCount = menuItems.length;
   }
   .menu-main-group {
     position: fixed;
-    top: 45px;
+    top: var(--menuHeight);
     left: 0px;
     right: 0px;
     display: flex;
@@ -56,7 +57,10 @@ const menuItemCount = menuItems.length;
   .menu-dropdown-button {
     display: none;
   }
-  .menu-toggle-button {
+  #menu-toggle {
+    border: none;
+    background: transparent;
+    padding: 0 0.5rem;
   }
   .menu-mobile-hidden {
     transform: translateY(-50px);
