--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -44,15 +44,15 @@ const menuItemCount = menuItems.length;
     transition: all 0.3s;
   }
   .menu-submenu {
+    overflow: hidden;
+    z-index: -100;
+  }
+  .menu-submenu-item-wrapper {
     display: flex;
     flex-direction: column;
     padding-left: 1rem;
     font-size: 0.75rem;
     gap: 0.25rem;
-    overflow: hidden;
-    z-index: -100;
-  }
-  .menu-submenu a {
   }
   .menu-dropdown-button {
     display: none;
@@ -100,16 +100,19 @@ const menuItemCount = menuItems.length;
     }
     .menu-submenu {
       position: absolute;
-
-      top: 45px;
+      overflow: hidden;
+      top: var(--menuHeight);
+      transition: all 0.3s;
+      gap: 1rem;
+    }
+    .menu-submenu-item-wrapper {
       display: inline-flex;
       flex-direction: column;
-      gap: 1rem;
-      background-color: var(--menuDropdownColor);
       padding: 0.5rem;
       transition: all 0.3s;
+      background-color: var(--menuDropdownColor);
     }
-    .menu-submenu a {
+    .menu-submenu-item-wrapper a {
       width: max-content;
     }
     .dropdown-group {
@@ -134,6 +137,12 @@ const menuItemCount = menuItems.length;
       right: 0;
     }
     .submenu-hidden {
+      height: 0px;
+      opacity: 0;
+      pointer-events: none;
+      transition: all 0.3s;
+    }
+    .submenu-hidden .menu-submenu-item-wrapper {
       transform: translateY(-50px);
       height: 0px;
       opacity: 0;
@@ -179,11 +188,13 @@ const menuItemCount = menuItems.length;
                 </div>
 
                 <div class="menu-submenu submenu-hidden" id={item.groupID}>
-                  {item.subItems.map(
-                    (subItem: { url: string; title: string }) => {
-                      return <a href={subItem.url}>{subItem.title}</a>;
-                    }
-                  )}
+                  <div class="menu-submenu-item-wrapper">
+                    {item.subItems.map(
+                      (subItem: { url: string; title: string }) => {
+                        return <a href={subItem.url}>{subItem.title}</a>;
+                      }
+                    )}
+                  </div>
                 </div>
               </div>
             </>
