adds some spacing back into topbar nav

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -43,6 +43,7 @@ const menuItemCount = menuItems.length;
     transform: none;
     transition: all 0.3s;
   }
+
   .menu-submenu {
     overflow: hidden;
     z-index: -100;
@@ -53,6 +54,9 @@ const menuItemCount = menuItems.length;
     padding-left: 1rem;
     font-size: 0.75rem;
     gap: 0.25rem;
+  }
+  .menu-submenu a {
+    padding: 0.5rem 0;
   }
   .menu-dropdown-button {
     display: none;
