improves appearance of menu on large sm devices

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -11,8 +11,8 @@ const fontSettings = fontRules(settings.menu.typography);
 
 <style
   define:vars={{
-    menuBackgroundColor: settings.menu.appearance.backgroundColor,
-    menuDropdownColor: settings.menu.appearance.dropdownColor,
+    menuBackgroundColor: settings.menu.colors.backgroundColor,
+    menuDropdownColor: settings.menu.colors.dropdownColor,
     ...fontSettings,
   }}
 >
